[package]
name = "orderbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "orderbooklib"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.7"
features = ["extension-module"]

[dependencies.libc]
version="0.2"

[dependencies.lazy_static]
version = "1.4.0"
